vault backup: 2026-01-22 18:47:37